--- a/taa/source/package.json
+++ b/taa/source/package.json
@@ -1,5 +1,13 @@
 {
-  "name": "stalchild",
-  "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "angular": "1.4.8",
+    "angular-route": "1.4.8",
+    "bootstrap": "4.6.2",
+    "cyberhawk": "0.8.0",
+    "johto": "^0.0.1",
+    "jquery": "3.6.1",
+    "js-cookie": "2.2.1",
+    "underscore": "1.13.6",
+    "yarn": "^1.22.22"
+  }
 }
