--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,5 +5,6 @@ USER root
 RUN apt-get update && apt-get install rename
 COPY source/* /home/app/
 WORKDIR /home/app/
+RUN mv /home/app/app /home/app/project
 
 USER app
