--- a/rails_gem/Gemfile
+++ b/rails_gem/Gemfile
@@ -3,3 +3,28 @@
 source 'https://rubygems.org'
 
 gemspec
+
+gem 'actionpack',                '7.2.2.1'
+gem 'activerecord',              '7.2.2.1'
+gem 'bundler',                   '~> 2.6.8'
+gem 'factory_bot',               '6.2.1'
+gem 'minitest',                  '5.25.4'
+gem 'pry',                       '>= 0.14.2'
+gem 'pry-nav',                   '>= 1.0.0'
+gem 'rake',                      '13.2.1'
+gem 'reek',                      '>= 6.4.0'
+gem 'rspec',                     '>= 3.13.0'
+gem 'rspec-collection_matchers', '1.2.1'
+gem 'rspec-core',                '>= 3.13.3'
+gem 'rspec-expectations',        '>= 3.13.3'
+gem 'rspec-mocks',               '>= 3.13.2'
+gem 'rspec-rails',               '>= 8.0.0'
+gem 'rspec-support',             '>= 3.13.2'
+gem 'rubocop',                   '>= 1.75.5'
+gem 'rubocop-rspec',             '>= 3.6.0'
+gem 'rubycritic',                '>= 4.9.2'
+gem 'shoulda-matchers',          '6.5.0'
+gem 'simplecov',                 '0.22.0'
+gem 'tzinfo-data',               '~> 1.2025.2'
+gem 'yard',                      '0.9.37'
+gem 'yardstick',                 '0.9.9'
