--- a/taa/source/package.json
+++ b/taa/source/package.json
@@ -3,11 +3,23 @@
     "angular": "1.4.8",
     "angular-route": "1.4.8",
     "bootstrap": "4.6.2",
-    "cyberhawk": "0.10.0",
+    "cyberhawk": "0.11.0",
     "johto": "^0.0.1",
     "jquery": "3.6.1",
     "js-cookie": "2.2.1",
     "underscore": "1.13.6",
     "yarn": "^1.22.22"
+  },
+  "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1"
+  },
+  "scripts": {
+    "lint": "npx eslint app/assets/javascripts/",
+    "lint-fix": "npx eslint app/assets/javascripts/ --fix"
   }
 }
