--- a/taau/.circleci/config.yml
+++ b/taau/.circleci/config.yml
@@ -88,8 +88,14 @@ jobs:
           name: Bundle Install
           command: bundle install
       - run:
+          name: Yarn Install
+          command: yarn install
+      - run:
           name: Rubocop
           command: rubocop
+      - run:
+          name: Lint
+          command: npm run lint
   build-and-release:
     machine: true
     steps:
